Add to faction subsystem. Add a simple GUI. Add debug command line.